fix(docblocks): prevent gradient overlap

--- a/shared/styles/doc.scss
+++ b/shared/styles/doc.scss
@@ -19,9 +19,10 @@
   content: '';
   position: absolute;
   bottom: 0;
+  left: 0;
+  right: 0;
   background: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 1));
   display: block;
-  width: 100%;
   height: 4rem;
 }
 
